dockerize app + db

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,5 @@
 PORT=5000
+SECRET_KEY='cowlar-test'
+
+# INSERT DOCKER POSTGRESQL CONNECTION URL HERE
+DATABASE_URL="postgresql://admin:pass@localhost:5432/cowlar-test?schema=public"
