--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,7 @@
 PORT=5000
 SECRET_KEY='cowlar-test'
+TOKEN_EXPIRE='2h'
+SALT_ROUNDS=10
 
 # INSERT DOCKER POSTGRESQL CONNECTION URL HERE
 DATABASE_URL="postgresql://admin:pass@localhost:5432/cowlar-test?schema=public"
