--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/morgan": "^1.9.4",
     "@types/node": "^20.2.5",
     "nodemon": "^2.0.22",
     "prisma": "^4.15.0",
@@ -21,12 +22,15 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.0.2",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0",
     "winston": "^3.9.0",
     "zod": "^3.21.4"
   }
