--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
   "author": "Talal",
   "devDependencies": {
     "@prisma/client": "^4.15.0",
-    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
@@ -23,7 +23,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^8.0.2",
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
