--- a/backend/package.json
+++ b/backend/package.json
@@ -35,8 +35,6 @@
     "express-rate-limit": "^6.7.0",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
-    "morgan": "^1.10.0",
-    "winston": "^3.9.0",
-    "zod": "^3.21.4"
+    "morgan": "^1.10.0"
   }
 }
